Added getting task completion status
